# flak_eval

./: .gitmodules  CMakeLists.txt  README.txt
bget/: CMakeLists.txt  bget.c  bget.h
libFLAC/: CMakeLists.txt
libFLAC_bgets/: CMakeLists.txt
libFLAC_bgets/include/: config.h
libFLAC_bgets/include/private/: macros.h  private.lnk
libFLAC_bgets/include/share/: alloc.h
src/: XCORE-AI-EXPLORER.xn  main.c
